force-app/main/default/objects/Order_data__c/Order_data__c.object-meta.xml
<CustomObject>
    <label>Order_data</label>
    <nameField>
        <label>Order_data Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Order_data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>