force-app/main/default/objects/Order_data__c/fields/Customers_Favourite_Colour__c.field-meta.xml
<CustomField>
    <fullName>Customers_Favourite_Colour__c</fullName>
    <label>Customers Favourite Colour</label>
    <length>125</length>
    <type>Text</type>
</CustomField>