force-app/main/default/objects/Order_data__c/fields/product_data__c.field-meta.xml
<CustomField>
    <fullName>product_data__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>product_data</label>
    <referenceTo>product_data__c</referenceTo>
    <relationshipLabel>Order_data</relationshipLabel>
    <relationshipName>Order_data</relationshipName>
    <type>Lookup</type>
</CustomField>